static/style.css
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
	flex: 1 0 auto;
}

#progress-container {
	visibility: hidden;
	margin-top: 7%;
	position: absolute;
	left: 0;
	right: 0;
}

#progress-message {
    text-align: center;
}

#input-block {
	height: 23%;
	position: relative;
}

#navigation-container {
	right: 0;
	top: 0;
	margin-right: 30px;
	position: absolute;
}

#page-title {
	position: absolute;
	top: 0;
	left: 30px;
	background-color:
}

.tabs .tab a:hover {
    color: #f9f9f9; 
}

.tabs .tab a {
    color: #fff;
}

.tabs .indicator {
	background-color: #fff;
}

#input-content {
	position: absolute;
	bottom: 15px;
	left: 0;
	right: 0;
}

#main-container {
	position: relative;
	margin-top: 20px;
	display: none;
}

#about-container {
	display: block;
	margin-top: 20px;
}

#about-card {
	padding: 10px;
}

#welcome-card-container {
	visibility: visible;
}

#result-card-container {
	visibility: hidden;
}

#error-card-container {
	visibility: hidden;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
}

#result-card {
	padding: 10px;
}

.card-container {
	margin-bottom: 90px;
}

.result-card-header {
	font-size: 15px;
}

#result-lib-name {
	font-size: medium;
}

#result-card-dep-list {
	display: none;
}

.indent-right {
	margin-left: 20px;	
}

th {
	font-weight: normal;
	padding-left: 0px;
}

td {
	padding-left: 20px;
}

#search-box {
	line-height: normal;
    padding-left: 10px;
    padding-right: 10px;
    margin-bottom: 0px;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}

#search-button {
	position: absolute;
	right: 0;
	top: 0;
    font-size: 40px;
    padding-top: 2px;
    padding-bottom: 2px;
    margin-right: 8px;
}

#output-block {
	margin-top: 10px;
}

.about-paragraph {
	font-size: 17px;
}

.input-field input[type=text] {
	border: 0px solid #000;
    box-shadow: 0 0px 0 0 #000;
}

.input-field input[type=text]:focus {
	border: 0px solid #000;
    box-shadow: 0 0px 0 0 #000;
}

.page-footer {
	position: fixed;
	width: 100%;
	bottom: 0px;
}

.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }

.material-icons.md-light { color: rgba(255, 255, 255, 1); }
.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }

.material-icons.turquoise { color: #64dee4; }

